# vita-plugin-manager

./: .gitmodules  .vimrc  CMakeLists.txt
sce_sys/livearea/contents/: template.xml
src/: appdb.c  button.c  button.h  config.c  config.h  console.c  console.h  const.h  file.c  file.h  main.c  menu.c  menu.h  plugin.c  plugin.h
